--- a/src/style/index.css
+++ b/src/style/index.css
@@ -22,13 +22,15 @@
   height: 100vh;
   background-size: cover !important;
 }
-
+polygon{
+  fill: aliceblue;
+}
 .previousButton,
 .nextButton {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 10;
+  z-index: 20;
   width: 32px;
   height: 32px;
   text-indent: -9999px;
